1. Fix header layout and card styles 2. added snap alignment to header

--- a/components/Card/Card.scss
+++ b/components/Card/Card.scss
@@ -3,6 +3,10 @@
   width: 100%;
   background-color: white;
   padding: 2rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   h2 {
     margin: 0 auto 1.5rem;
